# meshProcessing

./: .gitignore  CMakeLists.txt  meshProcessingTools.sln
decreaseVertIndicesVTS/: decreaseVertIndicesVTS.cpp  decreaseVertIndicesVTS.h  decreaseVertIndicesVTS.vcxproj  helpers.h  main.cpp  precomp.h
ivtovts/: ivtovts.sln  ivtovts.vcxproj  main.cpp
offToVts/: CMakeLists.txt  main.cpp  offToVts.vcxproj
